--- a/spring-time-web/src/main/webapp/app/index.html
+++ b/spring-time-web/src/main/webapp/app/index.html
@@ -26,8 +26,12 @@
                                 <li><a href="#/resporting"><span class="glyphicon glyphicon-list-alt"></span>  Reporting</a></li>
                             </ul>
                         </div>
-                        <div class="col-md-2">
-                            <div style="color: #FFFFFF; margin-top:10px;" class="pull-right">Revision 0.1</div>
+                        <div class="col-md-2" ng-controller="LogoutCtrl">
+                            <div ng-show="currentUser">
+                                <button type="button" class="btn btn-default btn-lg" ng-click="logout()">
+                                    <span class="glyphicon glyphicon-off"></span> Logout
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -51,6 +55,7 @@
         <!-- main scripts-->
         <script src="js/app/main.js"></script>
         <script src="js/app/controllers/login.js"></script>
+         <script src="js/app/controllers/logout.js"></script>
         <script src="js/app/controllers/dashboard.js"></script>
     </body>
 </html>
