--- a/spring-time-web/src/main/webapp/app/index.html
+++ b/spring-time-web/src/main/webapp/app/index.html
@@ -23,7 +23,7 @@
                                 <li><a href="#/dashboard"><span class="glyphicon glyphicon-dashboard"></span>  Dashboard</a></li>   <!-- removed class='active' -->
                                 <li><a href="#/stamp"><span class="glyphicon glyphicon-time"></span>  Zeit erfassen</a></li>
                                 <li><a href="#/holiday"><span class="glyphicon glyphicon-picture"></span>  Absenzen</a></li>
-                                <li><a href="#/resporting"><span class="glyphicon glyphicon-list-alt"></span>  Reporting</a></li>
+                                <li><a href="#/admin"><span class="glyphicon glyphicon-list-alt"></span>  Admin</a></li>
                             </ul>
                         </div>
                         <div class="col-md-2" ng-controller="LogoutCtrl">
