solution for second practice

--- a/spring-time-web/src/main/webapp/app/index.html
+++ b/spring-time-web/src/main/webapp/app/index.html
@@ -48,10 +48,12 @@
         <script src="js/external/angular-local-storage.js"></script>
 
         <!-- service modules before...-->
+         <script src="js/app/filters/commonFilters.js"></script>
         <script src="js/app/services/authenticationService.js"></script>
         <script src="js/app/services/navigationHandlingService.js"></script>
+        <script src="js/app/services/timesheetService.js"></script>
         
-        <!-- business modules before..-->
+        <!-- business modules before..-->        
         <!-- main scripts-->
         <script src="js/app/main.js"></script>
         <script src="js/app/controllers/login.js"></script>
