--- a/spring-time-web/src/main/webapp/app/index.html
+++ b/spring-time-web/src/main/webapp/app/index.html
@@ -47,12 +47,14 @@
         <script src="js/external/angular-cookies.js"></script>
         <script src="js/external/angular-ui-router.js"></script>
         <script src="js/external/angular-local-storage.js"></script>
+        <script src="js/external/angular-resources.js"></script>
 
         <!-- service modules before...-->
          <script src="js/app/filters/commonFilters.js"></script>
         <script src="js/app/services/authenticationService.js"></script>
         <script src="js/app/services/navigationHandlingService.js"></script>
         <script src="js/app/services/timesheetService.js"></script>
+         <script src="js/app/services/userResource.js"></script>
         
         <!-- business modules before..-->        
         <!-- main scripts-->
