--- a/spring-time-web/src/main/webapp/app/index.html
+++ b/spring-time-web/src/main/webapp/app/index.html
@@ -48,6 +48,7 @@
         <script src="js/external/angular-ui-router.js"></script>
         <script src="js/external/angular-local-storage.js"></script>
         <script src="js/external/angular-resources.js"></script>
+        <script src="js/external/ui-bootstrap-tpls-0.11.0.js"></script>
 
         <!-- service modules before...-->
          <script src="js/app/filters/commonFilters.js"></script>
