expanded timesheet including delete / put

--- a/spring-time-web/src/main/webapp/app/index.html
+++ b/spring-time-web/src/main/webapp/app/index.html
@@ -57,7 +57,13 @@
         <script src="js/app/services/timesheetService.js"></script>
          <script src="js/app/services/userResource.js"></script>
         
-        <!-- business modules before..-->        
+        <!-- business modules before..-->
+        <script src="timestamp/entryResource.js"></script>
+        <script src="timestamp/timestampModule.js"></script>
+        <script src="timestamp/timestampCtrl.js"></script>
+        <script src="timestamp/timestampMasterCtrl.js"></script>
+         <script src="timestamp/timestampDetailCtrl.js"></script>
+        <script src="timestamp/timestampFilters.js"></script>
         <!-- main scripts-->
         <script src="js/app/main.js"></script>
         <script src="js/app/controllers/login.js"></script>
